@@ -44,6 +44,7 @@
 #include "log.h"
 #include "netevent.h"
 #include "net_help.h"
+#include "ubhook.h"
 #include <ldns/packet.h>
 
 /* create probes for the ip addresses in the string */
@@ -753,7 +754,9 @@ probe_done(struct probe_ip* p)
 	if(p->works) {
 		if(!svr->probe_direct && !svr->saw_first_working) {
 			svr->saw_first_working = 1;
-			/* TODO: signal unbound a working server */
+			/* signal unbound a working server */
+			hook_unbound_cache(svr->cfg, p->name);
+			/* TODO: set resolv.conf to 127.0.0.1 */
 		} else if(svr->probe_direct && !svr->saw_direct_work) {
 			svr->saw_direct_work = 1;
 			/* no need for wait for more done */
@@ -792,9 +795,9 @@ probe_all_done(void)
 	if(svr->probe_direct && svr->saw_direct_work) {
 		/* set unbound to process directly */
 		verbose(VERB_OPS, "probe done: DNSSEC to auth direct");
-		/* TODO signal unbound */
 		svr->res_state = res_auth;
 		svr->insecure_state = 0;
+		hook_unbound_auth(svr->cfg);
 		/* TODO set resolv.conf to 127.0.0.1 */
 	} else if(svr->probe_direct && !svr->saw_direct_work) {
 		/* if there are no cache IPs, then there is nothing else
@@ -802,12 +805,12 @@ probe_all_done(void)
 		 * no network connectivity */
 		if(svr->num_probes_to_cache == 0) {
 			verbose(VERB_OPS, "probe done: disconnected");
-			/* set unbound to go dark */
-			/* TODO: signal unbound */
-			/* TODO: set resolver.conf to 127.0.0.1 (get rid
-			 * of old settings that may be in there) */
 			svr->insecure_state = 0;
 			svr->res_state = res_disconn;
+			/* set unbound to go dark */
+			hook_unbound_dark(svr->cfg);
+			/* TODO: set resolver.conf to 127.0.0.1 (get rid
+			 * of old settings that may be in there) */
 		} else {
 			verbose(VERB_OPS, "probe done: DNSSEC fails");
 			/* DNSSEC failure, and there is some unsafe IPs */
@@ -815,17 +818,20 @@ probe_all_done(void)
 				svr->insecure_state = 0; /* ask again */
 			svr->res_state = res_dark;
 			/* set unbound to dark */
+			hook_unbound_dark(svr->cfg);
 			/* see what the user wants */
-			/* TODO signal unbound */
-			/* TODO set resolv.conf to 127.0.0.1 now,
-			 * the user may select insecure later */
+			if(svr->insecure_state) {
+				/* TODO set resolv.conf to DHCP IP list */
+			} else { /* TODO set resolv.conf to 127.0.0.1 now,
+			 	* the user may select insecure later */
+			}
 		}
 	} else {
 		verbose(VERB_OPS, "probe done: DNSSEC to cache");
 		/* send the working servers to unbound */
 		svr->res_state = res_cache;
 		svr->insecure_state = 0;
-		/* TODO signal unbound */
+		hook_unbound_cache_list(svr->cfg, svr->probes);
 		/* TODO set resolv.conf to 127.0.0.1 */
 	}
 	svr_send_results(svr);
